<resources>
    <string name="app_name">Ganado Asegurado</string>
    <string name="txtUser">Nombre de Usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="logoDescription">Un punto de mira con una huella de perro en el medio.</string>
    <string name="btnOk">Ok</string>
    <string name="btnPets">Mascotas</string>
    <string name="btnUsers">Usuarios</string>
    <string name="txtRegister">¿No tienes cuenta?</string>
    <string name="btnRegister">Regístrate</string>
    <string name="txtExample">Example</string>
    <string name="btnEdit">Editar Información</string>
    <string name="txtName">Nombre</string>
    <string name="txtLastName">Apellido</string>
    <string name="txtEmail">Correo Electrónico</string>
    <string name="userImage">Foto de perfil definida por el usuario.</string>
    <string name="btnLocation">VER LOCACIÓN</string>
    <string name="btnEditInfo">Editar Información</string>
    <string name="btnSave">Guardar</string>
    <string name="petImageDescription">Foto de macota</string>
    <string name="btnAddPet">Añadir Mascota</string>
    <string name="txtSimNumber">Numero de Sim</string>
    <string name="txtSpecies">Especie</string>
    <string name="txtPetName">Nombre</string>
</resources>
