<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgUser"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/user_back"
                android:contentDescription="@string/userImage" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@android:color/black"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/txtName"
                android:inputType="textPersonName"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@android:color/black"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/txtLastName"
                android:inputType="textPersonName"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@android:color/black"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/txtUser"
                android:inputType="textPersonName"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@android:color/black"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/txtPass"
                android:inputType="textPassword"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@android:color/black"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/btnSave"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>