<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PetDetails">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="205dp"
        android:layout_height="131dp"
        android:contentDescription="@string/petImageDescription"
        app:srcCompat="@android:color/background_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="textCapCharacters|textCapWords|textPersonName"
                android:text="Nombre" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="$petName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pasos"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="textCapCharacters|textCapWords|textPersonName"
                android:text="Pasos dados" />

            <EditText
                android:id="@+id/txtSteps"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="$steps" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/distacia"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="textCapCharacters|textCapWords|textPersonName"
                android:text="Distancia" />

            <EditText
                android:id="@+id/txtDistance"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="$distancia" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEditInfo"
                style="@android:style/ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/btnEditInfo" />

            <Button
                android:id="@+id/btnLocation"
                style="@android:style/ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/btnLocation" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>